# MOPS

./: .gitignore  AGENTS.md  LICENSE  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mops/: __main__.py  api.py  client.py  dashboard.html  dashboard.py  discovery.py  protocol.py  proxy.py  scheduler.py  server.py  service.py  stats.py  tunnel.py  web.py
src/mops/static/: dashboard.css  dashboard.js  index.html
src/mops/stats/: __init__.py  connection.py  history.py  registry.py  traffic.py
tests/: conftest.py  test_api.py  test_api_extra.py  test_client.py  test_client_extra.py  test_connection_extra.py  test_dashboard.py  test_dashboard_service.py  test_discovery.py  test_integration.py  test_main.py  test_main_extra.py  test_protocol.py  test_proxy.py  test_server.py  test_service.py  test_stats_extra.py  test_tunnel_extra.py
web/: _serve.py  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: dashboard-test.js  dashboard-test.ts  dashboard.spec.ts  multi-client-viz.spec.ts  multi-node.spec.ts
web/e2e/fixtures/: mock-data.ts
web/src/: cards.ts  data.ts  format.test.ts  format.ts  graph.test.ts  graph.ts  main.ts  style.css  toTopo.test.ts  topo.ts  types.ts
