[project]
name = "mops"
version = "0.1.0"
description = "Multi-node Outbound Proxy System"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "zeroconf>=0.131.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
mops = "mops.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mops"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mops"]

[tool.coverage.report]
fail_under = 85
