[project]
name = "carrot-mops"
version = "1.2.1"
description = "Multi-node Outbound Proxy System"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "zeroconf>=0.131.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/crthu/MOPS"
Repository = "https://github.com/crthu/MOPS"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "bump-my-version>=1.3.0",
]

[project.scripts]
mops = "mops.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mops"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mops"]

[tool.coverage.report]
fail_under = 85

[tool.bumpversion]
current_version = "1.2.1"
commit = true
tag = true
allow_dirty = true
tag_name = "v{new_version}"
message = "chore(release): bump version {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/mops/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
